Changes for 3.4.11rc1

New features:

Bug fixes:
A.F....... [ZBX-13355] fixed media type a required password field successfully passing validation while being empty and prevented auto-filling stored passwords by browser (Ivo)
.D........ [ZBX-14398] improved "Server" parameter description in Zabbix agent configuration file (vso)
.......PS. [ZBX-14447] reverted ZBX-13788 fix because of broken server-proxy compatibility between minor versions (wiper)
...G...... [ZBX-12250] fixed logrt[] item to analyze log file from start if no log files match and no log files were seen before (Andris)
.......PS. [ZBX-13765] fixed discovered host status update if it was down and a service was discovered on that host (Andris)
...G...... [ZBX-12070] fixed "proc.num" and "proc.mem" items calculation of values when zabbix_agentd called in test mode (Sergejs)
........S. [ZBX-14423] fixed use of initialized variable during application discovery (vso)
.......PS. [ZBX-12990] improved "vmware.hv.datastore.size" through usage the performance counters (MVekslers)

--------------------------------------------------------------------------------
Changes for 3.4.10

3.4.10rc1 was released as 3.4.10 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.10rc1

Bug fixes:
..F....... [ZBX-14414] fixed PHP 7.2 error message in the Monitoring->Latest data page (Sasha)
A.F....... [ZBX-13712] fixed "Undefined index: master_itemid" and SQL errors in item.update and itemprototypr.update methods; fixed updating of discovered items (Sasha)
..F....... [ZBX-13549] fixed displaying of not monitored triggers in maps (miks)
..F....... [ZBX-12359] fixed "Automatic icon selection" checkbox not working and displaying two icons at once in map constructor (Ivo)
........S. [ZBX-14333] fixed {ESC.HISTORY} and action log not to display colon without target host when executed on Zabbix server (vso)