@@ -3,6 +3,7 @@ Changes for 3.4.11rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-6046] fixed the functions 'net.if.*' for Solaris with empty 64 bits counters (MVekslers)
 A.F....... [ZBX-13355] fixed media type a required password field successfully passing validation while being empty and prevented auto-filling stored passwords by browser (Ivo)
 .D........ [ZBX-14398] improved "Server" parameter description in Zabbix agent configuration file (vso)
 .......PS. [ZBX-14447] reverted ZBX-13788 fix because of broken server-proxy compatibility between minor versions (wiper)
@@ -1265,6 +1266,7 @@ Changes for 3.0.19rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-6046] fixed the functions 'net.if.*' for Solaris with empty 64 bits counters (MVekslers)
 A.F....... [ZBX-13355] fixed media type a required password field successfully passing validation while being empty and prevented auto-filling stored passwords by browser (Ivo)
 .D........ [ZBX-14398] improved "Server" parameter description in Zabbix agent configuration file (vso)
 .......PS. [ZBX-14447] reverted ZBX-13788 fix because of broken server-proxy compatibility between minor versions (wiper)
